# transport-ladders

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: SCAN_NOTES.md
paper/: iiia_main.tex  iiib_main.tex  preamble.tex
paper/appendix/: shared_appendix.tex
paper/sections/: iiia_sec1_intro.tex  iiia_sec2_ladders.tex  iiia_sec3_completeness.tex  iiib_sec1_intro.tex  iiib_sec2_certification.tex  iiib_sec3_exclusion.tex
scripts/: build-iiia.ps1  build-iiib.ps1  run-tests.ps1  sanity.ps1  setup-python.ps1
src/transport_ladders/: __init__.py  certification.py  coxeter.py  io.py  ladders.py  words.py
tests/: test_certification_placeholder.py  test_imports.py
