[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transport-ladders"
version = "0.0.1"
description = "Shared codebase for transport ladders, completeness, and certification (Paper IIIa/IIIb)"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]